--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,16 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "lodash": "4.17.21",
+    "lodash.shuffle": "4.2.0",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/lodash": "4.14.199"
   }
 }
