--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,9 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@types/lodash": "4.14.199"
+    "@types/lodash": "4.14.199",
+    "eslint-config-prettier": "9.0.0",
+    "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "0.5.6"
   }
 }
