--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,7 +1,5 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "prettier"],
+  "extends": ["next/core-web-vitals", "prettier"],
 
   "rules": {
     "react-hooks/exhaustive-deps": "off"
