--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "format-duration": "3.0.2",
     "lodash": "4.17.21",
     "lodash.shuffle": "4.2.0",
     "next": "13.5.2",
@@ -25,6 +26,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/format-duration": "1.0.2",
     "@types/lodash": "4.14.199",
     "eslint-config-prettier": "9.0.0",
     "prettier": "3.0.3",
